Rest assured based test addition & lot of gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,53 @@ ScreenshotsSaved/
 Outputs/
 .idea/
 *.class
+
+*.7z
+*.bak
+*.bz2
+*.bzip
+*.cab
+*.class
+*.com
+*.deb
+*.dll
+*.dmg
+*.ear
+*.egg
+*.exe
+*.gem
+*.gz
+*.idea
+*.ids
+*.iml
+*.ipr
+*.iso
+*.iws
+*.jar
+*.launch
+*.lck
+*.lzma
+*.msi
+*.msm
+*.msp
+*.o
+*.orig
+*.rar
+*.rej
+*.rpm
+*.so
+*.spec.mod
+*.sublime-*
+*.swp
+*.tar
+*.tmp
+*.un~
+*.war
+*.xpi
+*.xz
+*.zip
+*.jtl
+*~
+*~.nib
+.buildpath
+.classpath
